--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
+body
+{
+    background-color: #759FBC;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+
+html
+{
+    color: white;
+}
+
 nav
 {
-    background-color: cadetblue;
+    background-color: #9AC2C9;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a
+{
+    margin-top: auto 0;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover
+{
+    background-color: #8AA1B1;
 }
