--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 body
 {
     background-color: #759FBC;
@@ -9,16 +11,43 @@ body
 html
 {
     color: white;
+    font-family: 'Itim', cursive;
 }
 
-nav
+.Titre
+{
+    text-align: center;
+}
+
+.header
+{
+    background-color: #8AA1B1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 200px;
+}
+
+.header img
+{
+    border-radius: 25px;
+    image-rendering: optimizeQuality;
+    height: 90%;
+}
+
+.italique
+{
+    font-style: italic;
+}
+
+.Links
 {
     background-color: #9AC2C9;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
-nav a
+.Links a
 {
     margin-top: auto 0;
     padding: 10px;
@@ -26,7 +55,43 @@ nav a
     text-decoration: none;
 }
 
-nav a:hover
+.Links a:hover
 {
     background-color: #8AA1B1;
 }
+
+.Deplacement
+{
+    background-color: #9AC2C9;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.Deplacement a
+{
+    margin-top: auto 0;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.Deplacement a:hover
+{
+    background-color: #8AA1B1;
+}
+
+div
+{
+    text-align: center;
+}
+
+.QuiSuisJe
+{
+    
+}
+
+.Competences
+{
+
+}
+
