--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
-body
-{
+body {
     background-color: #759FBC;
     display: flex;
     flex-direction: column;
@@ -9,19 +8,17 @@ body
     border-bottom: 1px solid black;
 }
 
-html
-{
+html {
     color: white;
     font-family: 'Itim', cursive;
 }
 
-.Titre, body h1
-{
+.Titre,
+body h1 {
     text-align: center;
 }
 
-.header
-{
+.header {
     background-color: #8AA1B1;
     display: flex;
     justify-content: space-evenly;
@@ -29,85 +26,60 @@ html
     height: 200px;
 }
 
-.header img
-{
+.header img {
     border-radius: 25px;
     image-rendering: optimizeQuality;
     height: 90%;
 }
 
-.italique
-{
+.italique {
     font-style: italic;
 }
 
-.Links
-{
+.Links {
     background-color: #9AC2C9;
     display: flex;
     justify-content: space-evenly;
 }
 
-.Links a
-{
+.Links a {
     margin-top: auto 0;
     padding: 10px;
-    color: white;
+    color: black;
     text-decoration: none;
+    border-radius: 5px;
+    background: #e0e0e0;
+    box-shadow: 2px 2px 10px #7d7d7d86,
+        -2px -2px 10px #6e6e6e77;
+    margin: 15px;
 }
 
-.Links a:hover
-{
+.Links a:hover {
+    color: white;
     background-color: #8AA1B1;
 }
 
-.Deplacement
-{
-    background-color: #9AC2C9;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.Deplacement a
-{
-    margin-top: auto 0;
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-}
-
-.Deplacement a:hover
-{
-    background-color: #759FBC;
-}
-
-div
-{
+div {
     text-align: center;
 }
 
-div h1
-{
+div h1 {
     color: black;
 }
 
-.QuiSuisJe
-{
+.QuiSuisJe {
     border-bottom: 1px solid black;
 }
 
-.Competences
-{
+.Competences {
     text-align: justify;
     border-bottom: 1px solid black;
 }
 
-.ExperiencesPro
-{
+.ExperiencesPro {
     border-bottom: 1px solid black;
 }
 
-.Formation
-{
+.Formation {
     border-bottom: 1px solid black;
 }
