--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 html {
     color: white;
     font-family: 'Itim', cursive;
+    scroll-behavior: smooth;
 }
 
 .Titre,
@@ -61,25 +62,22 @@ body h1 {
 
 div {
     text-align: center;
+    border-bottom: 1px solid black;
 }
 
 div h1 {
     color: black;
 }
 
-.QuiSuisJe {
-    border-bottom: 1px solid black;
+.CESI {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-.Competences {
-    text-align: justify;
-    border-bottom: 1px solid black;
+.CL {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-.ExperiencesPro {
-    border-bottom: 1px solid black;
-}
-
-.Formation {
-    border-bottom: 1px solid black;
-}
