--- a/style.css
+++ b/style.css
@@ -20,11 +20,12 @@ body h1 {
 }
 
 .header {
-    background-color: #8AA1B1;
+    background-image: url(dl-files/theme-futuriste-abstrait.png);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 200px;
+    color: white;
 }
 
 .header img {
@@ -38,7 +39,7 @@ body h1 {
 }
 
 .Links {
-    background-color: #9AC2C9;
+    background-color: #555358;
     display: flex;
     justify-content: space-evenly;
 }
@@ -69,12 +70,16 @@ div h1 {
     color: black;
 }
 
+.QuiSuisJe {
+    background-color: #B7B6C1;
+}
+
 .ExperiencesPro {
-    background-color: #9AA2E1;
+    background-color: #D5CFE1;
 }
 
 .Formation {
-    background-color: #9AC2E9;
+    background-color: rgb(38, 52, 78);
 }
 
 .CESI {
@@ -85,17 +90,17 @@ div h1 {
 
 .DEUA {
     width: 33.333333333%;
-    background-color: #9AC2C9;
+    background-color: #183446;
 }
 
 .UNA {
     width: 33.333333333%;
-    background-color: #9DC7C1;
+    background-color: #022F40;
 }
 
 .lycee {
     width: 33.333333333%;
-    background-color: #9AC2C9;
+    background-color: #183446;
 }
 
 .CL {
@@ -106,19 +111,19 @@ div h1 {
 
 .Competences {
     width: 33.333333333%;
-    background-color: #759FDC;
+    background-color: #B7B6C1;
     text-align: left;
 }
 
 .Langues {
     width: 33.333333333%;
-    background-color: #979FFA;
+    background-color: #555358;
     text-align: left;
 }
 
 .Logiciels {
     width: 33.333333333%;
-    background-color: #919DAA;
+    background-color: #D5CFE1;
     text-align: left;
 }
 
