--- a/style.css
+++ b/style.css
@@ -1,132 +1,107 @@
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+/* styles.css */
+
+/* Réinitialisation des styles par défaut pour une base propre */
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
 
 body {
-    background-color: #759FBC;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+}
+
+header {
+    position: relative;
+    /* Permet d'utiliser la position absolue dans l'en-tête */
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    /* Ajuste la hauteur selon ton choix */
     display: flex;
-    flex-direction: column;
-    margin: 0;
-    border-bottom: 1px solid black;
-}
-
-html {
-    color: white;
-    font-family: 'Itim', cursive;
-    scroll-behavior: smooth;
-}
-
-.Titre,
-body h1 {
-    text-align: center;
-}
-
-.header {
-    background-image: url(dl-files/theme-futuriste-abstrait.png);
-    display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    height: 200px;
-    color: white;
 }
 
-.header img {
-    border-radius: 25px;
-    image-rendering: optimizeQuality;
-    height: 90%;
-}
-
-.italique {
-    font-style: italic;
-}
-
-.Links {
-    background-color: #555358;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.Links a {
-    margin-top: auto 0;
-    padding: 10px;
-    color: black;
-    text-decoration: none;
-    border-radius: 5px;
-    background: #e0e0e0;
-    box-shadow: 2px 2px 10px #7d7d7d86,
-        -2px -2px 10px #6e6e6e77;
-    margin: 15px;
-}
-
-.Links a:hover {
-    color: white;
-    background-color: #8AA1B1;
-}
-
-div {
+.header-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Modifier la valeur d'opacité ici (0.5 = 50% d'opacité) */
     text-align: center;
-    border-bottom: 1px solid black;
+    color: #fff;
 }
 
-div h1 {
-    color: black;
+header h1 {
+    font-size: 3rem;
 }
 
-.QuiSuisJe {
-    background-color: #B7B6C1;
+nav ul {
+    list-style: none;
 }
 
-.ExperiencesPro {
-    background-color: #D5CFE1;
+nav li {
+    display: inline-block;
+    margin-right: 1rem;
 }
 
-.Formation {
-    background-color: rgb(38, 52, 78);
+nav a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
 }
 
-.CESI {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+nav a:hover {
+    background-color: #555;
 }
 
-.DEUA {
-    width: 33.333333333%;
-    background-color: #183446;
+section {
+    padding: 2rem;
 }
 
-.UNA {
-    width: 33.333333333%;
-    background-color: #022F40;
+section h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
-.lycee {
-    width: 33.333333333%;
-    background-color: #183446;
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: #fff;
 }
 
-.CL {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.buttons {
+    margin-top: 20px;
 }
 
-.Competences {
-    width: 33.333333333%;
-    background-color: #B7B6C1;
-    text-align: left;
+.buttons a {
+    display: inline-block;
+    margin: 10px;
+    padding: 12px 24px;
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: #333;
+    border: none;
+    border-radius: 5px;
 }
 
-.Langues {
-    width: 33.333333333%;
-    background-color: #555358;
-    text-align: left;
+.buttons a:hover {
+    background-color: #555;
 }
 
-.Logiciels {
-    width: 33.333333333%;
-    background-color: #D5CFE1;
-    text-align: left;
-}
-
-.Coordonnees {
-    background-color: #9AA9A9;
+.separator {
+    height: 1px;
+    background-color: #ccc;
+    margin: 20px 0;
 }
