--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* styles.css */
-
-/* Réinitialisation des styles par défaut pour une base propre */
 body,
 h1,
 h2,
@@ -104,4 +101,30 @@ footer {
     height: 1px;
     background-color: #ccc;
     margin: 20px 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+}
+
+.image {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+}
+
+.image img {
+    max-width: 200px;
+    height: auto;
+    border-radius: 5px;
+    /* Optionnel : ajoute une bordure arrondie à l'image */
 }
