Update personnal projects

--- a/style.css
+++ b/style.css
@@ -128,3 +128,17 @@ footer {
     border-radius: 5px;
     /* Optionnel : ajoute une bordure arrondie à l'image */
 }
+
+.imageCenter {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.imageCenter img {
+    max-width: 100px;
+    height: auto;
+    border-radius: 5px;
+    /* Optionnel : ajoute une bordure arrondie à l'image */
+}
